--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .hero-title {
-  font-size: 3.6rem;
+  font-size: 4.5vw;
   font-weight: 800;
   text-align: center;
   margin-bottom: 1rem;
+}
+
+.credit-text {
+  font-size: 1.3vw;
+  padding-right: 1vw;
 }
