Font size calc funcs

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .hero-title {
-  font-size: 4.5vw;
+  font-size: calc(1rem + 2.5vw);
   font-weight: 800;
   text-align: center;
   margin-bottom: 1rem;
 }
 
 .credit-text {
-  font-size: 1.3vw;
+  font-size: calc(0.4rem + 0.5vw);
   padding-right: 1vw;
 }
