--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .hero-title {
+  font-size: calc(2.0rem + 1.4vw);
+  color: #2c333b;
   font-weight: 800;
   text-align: center;
-  margin-bottom: 1rem;
 }
 
 .credit-text {
