--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,11 @@
   font-size: calc(0.6rem + 0.5vw);
   padding-right: 1vw;
 }
+.h1{
+  font-weight: 500;
+}
+hr{
+
+  height: 3px !important;
+  color: #2E3235;
+}
