--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,13 @@
   font-weight: 500;
 }
 hr{
-
   height: 3px !important;
   color: #2E3235;
+}
+
+.btnEdit{
+  color: #F39B2B;
+}
+.btnDelete{
+  color: #A53B38;
 }
