--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500;600;700&display=swap");
 
 body {
   margin: 0;
