Responsive credit text margin

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 .hero-title {
-  font-size: calc(2.0rem + 1.4vw);
+  font-size: calc(2rem + 1.4vw);
   color: #2c333b;
   font-weight: 800;
   text-align: center;
@@ -7,19 +7,18 @@
 
 .credit-text {
   font-size: calc(0.6rem + 0.5vw);
-  padding-right: 1vw;
 }
-.h1{
+.h1 {
   font-weight: 500;
 }
-hr{
+hr {
   height: 3px !important;
-  color: #2E3235;
+  color: #2e3235;
 }
 
-.btnEdit{
-  color: #F39B2B;
+.btnEdit {
+  color: #f39b2b;
 }
-.btnDelete{
-  color: #A53B38;
+.btnDelete {
+  color: #a53b38;
 }
