--- a/src/assets/scss/partials/authors.scss
+++ b/src/assets/scss/partials/authors.scss
@@ -6,10 +6,31 @@
   div {
     font-weight: 500;
   }
+
   &:hover {
     background-color: #f5f5f5;
+
     .authorActionIcons {
       display: flex !important;
     }
   }
+}
+
+.createSectionTitle {
+  color: #336459;
+  font-weight: 600;
+}
+
+.createSectionCloseIcon {
+  color: #1E1E1E;
+
+  &:hover {
+    cursor: pointer;
+    fill: #a53b38;
+    color: white;
+  }
+}
+
+.createAuthorButton {
+  background-color: #01589D;
 }
