--- a/src/assets/scss/partials/books.scss
+++ b/src/assets/scss/partials/books.scss
@@ -13,3 +13,12 @@
     }
   }
 }
+
+.createBookButton {
+  background-color: #01589d;
+}
+.addBookSection {
+  &:hover {
+    cursor: pointer;
+  }
+}
