--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,10 @@
+$that-dull-green-color: #273339;
+
 .hero-title {
-  font-size: calc(2rem + 1.4vw);
-  color: #2c333b;
+  font-size: calc(2rem + 1.45vw);
+  margin-left: 1.3rem;
+  padding-top: 0;
+  color: $that-dull-green-color;
   font-weight: 800;
   text-align: center;
 }
@@ -8,9 +12,14 @@
 .credit-text {
   font-size: calc(0.6rem + 0.5vw);
 }
+
 .h1 {
+  font-size: calc(1.75rem + 1vw);
+  color: $that-dull-green-color;
   font-weight: 500;
+  padding-top: 0;
 }
+
 hr {
   height: 3px !important;
   color: #2e3235;
@@ -24,4 +33,12 @@ hr {
 }
 .addIcon {
   color: #0d46a2;
+}
+
+.data-section {
+  margin-left: 2rem;
+
+  @media screen and (max-width: 768px) {
+    margin-left: 0;
+  }
 }
