--- a/src/App.scss
+++ b/src/App.scss
@@ -1,44 +1,1 @@
-$that-dull-green-color: #273339;
-
-.hero-title {
-  font-size: calc(2rem + 1.45vw);
-  margin-left: 1.3rem;
-  padding-top: 0;
-  color: $that-dull-green-color;
-  font-weight: 800;
-  text-align: center;
-}
-
-.credit-text {
-  font-size: calc(0.6rem + 0.5vw);
-}
-
-.h1 {
-  font-size: calc(1.75rem + 1vw);
-  color: $that-dull-green-color;
-  font-weight: 500;
-  padding-top: 0;
-}
-
-hr {
-  height: 3px !important;
-  color: #2e3235;
-}
-
-.btnEdit {
-  color: #f39b2b;
-}
-.btnDelete {
-  color: #a53b38;
-}
-.addIcon {
-  color: #0d46a2;
-}
-
-.data-section {
-  margin-left: 2rem;
-
-  @media screen and (max-width: 768px) {
-    margin-left: 0;
-  }
-}
+@import "assets/scss/partials/welcome";
